--- a/MainApplication/CMakeLists.txt
+++ b/MainApplication/CMakeLists.txt
@@ -20,6 +20,7 @@ include_directories( ${CMAKE_SOURCE_DIR}/Headers/IO )
 include_directories( ${CMAKE_SOURCE_DIR}/Headers/Bluetooth )
 include_directories( ${CMAKE_SOURCE_DIR}/Headers/ControlSoftware )
 include_directories( ${CMAKE_SOURCE_DIR}/Headers/Core )
+include_directories( ${CMAKE_SOURCE_DIR}/Headers/PRU )
 
 # Add all of the files to the build
 file( GLOB_RECURSE Headers "Headers/*.h" )
