Started the skeleton for servo motor control.

--- a/MainApplication/CMakeLists.txt
+++ b/MainApplication/CMakeLists.txt
@@ -16,10 +16,11 @@ set( CMAKE_CXX_FLAGS "-Wall" )
 
 # Bring in the project headers
 include_directories( ${CMAKE_SOURCE_DIR}/Headers )
-include_directories( ${CMAKE_SOURCE_DIR}/Headers/IO )
 include_directories( ${CMAKE_SOURCE_DIR}/Headers/Bluetooth )
 include_directories( ${CMAKE_SOURCE_DIR}/Headers/ControlSoftware )
 include_directories( ${CMAKE_SOURCE_DIR}/Headers/Core )
+include_directories( ${CMAKE_SOURCE_DIR}/Headers/IO )
+include_directories( ${CMAKE_SOURCE_DIR}/Headers/MotorControl )
 include_directories( ${CMAKE_SOURCE_DIR}/Headers/PRU )
 
 # Add all of the files to the build
